fix(Sliders): vertically align handles in tin middle of the rail

--- a/src/components/Sliders/Slider.scss
+++ b/src/components/Sliders/Slider.scss
@@ -6,7 +6,7 @@ $slider-handle-size: 18px;
 $slider-handle-border-width: 2px;
 
 // Centering adjustments of the handle on the rail
-$slider-handle-adjust-top: -(math.div($slider-handle-size, 2) - math.div($slider-rail-height, 4));
+$slider-handle-margin-top: -(math.div($slider-handle-size, 2));
 
 // Definitions of variables for paddings, shadows, etc.
 $slider-padding: 5px 0;
@@ -23,13 +23,14 @@ $slider-padding: 5px 0;
     position: absolute;
     width: $slider-handle-size;
     height: $slider-handle-size;
-    margin-top: $slider-handle-adjust-top;
+    margin-top: $slider-handle-margin-top;
     border: solid $slider-handle-border-width var(--color-brand);
     border-radius: 50%;
     transition: background-color var(--transition-duration) ease,
         transform var(--transition-duration), box-shadow var(--transition-duration);
     background-color: var(--color-background);
     cursor: grab;
+    top: 50%;
 
     &:active {
         cursor: grabbing;
